# library-project

./: .gitignore  CMakeLists.txt
include/: Book.h  BookCatalog.h  Librarian.h  LibraryApp.h  LoanService.h  Person.h  Reader.h  ReaderRegistry.h
src/books/: Book.cpp  BookCatalog.cpp
src/loans/: LoanService.cpp
src/readers/: Librarian.cpp  Person.cpp  Reader.cpp  ReaderRegistry.cpp
src/ui/: LibraryApp.cpp  main.cpp
tests/: test_books.cpp  test_library_app.cpp  test_people.cpp  test_readers.cpp
